[gd_scene load_steps=4 format=3 uid="uid://vbwdutjw583l"]

[ext_resource type="Texture2D" uid="uid://cfmwnnwdeqen3" path="res://Art/UI/TextureMenu.png" id="1_kkufy"]
[ext_resource type="Script" path="res://Scenes/game_over.gd" id="1_t7e8v"]
[ext_resource type="Theme" uid="uid://bccry05pp3gv2" path="res://Art/UI/Theme & Stylebox/button.tres" id="2_8f3x5"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t7e8v")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_kkufy")
patch_margin_left = 7
patch_margin_top = 8
patch_margin_right = 7
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="GameOver" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -116.5
offset_top = 40.0
offset_right = 116.5
offset_bottom = 80.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 38
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stats" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -262.5
offset_top = 100.0
offset_right = 262.5
offset_bottom = 180.0
grow_horizontal = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TimeAlive" type="Label" parent="NinePatchRect/Stats"]
layout_mode = 2
text = "Time alive : 20/20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Collectibles" type="HBoxContainer" parent="NinePatchRect/Stats"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SoulsCollected" type="Label" parent="NinePatchRect/Stats/Collectibles"]
layout_mode = 2
text = "Souls collected : 200"

[node name="GoldsCollected" type="Label" parent="NinePatchRect/Stats/Collectibles"]
layout_mode = 2
text = "Golds collected : 1800"

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -160.0
offset_right = 60.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="RestartGame" type="Button" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8f3x5")
text = "Replay"

[node name="MainScene" type="Button" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8f3x5")
text = "Main Menu"

[node name="QuitGame" type="Button" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8f3x5")
text = "Quit Game"

[connection signal="pressed" from="NinePatchRect/HBoxContainer/VBoxContainer/RestartGame" to="." method="_on_restart_game_pressed"]
[connection signal="pressed" from="NinePatchRect/HBoxContainer/VBoxContainer/MainScene" to="." method="_on_main_scene_pressed"]
[connection signal="pressed" from="NinePatchRect/HBoxContainer/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
